solution of java version