@@ -20,7 +20,7 @@ public record PagedResult<T>(
 
     /** Maps each item and returns a new immutable PagedResult. */
     public <R> PagedResult<R> map(Function<? super T, ? extends R> f) {
-        List<R> mapped = items.stream().map(f).collect(java.util.stream.Collectors.toList());
+        List<R> mapped = items.stream().map(f).toList();
         return new PagedResult<>(mapped, page, size, total);
     }
 }
